syntax = "proto3";
package babylon.btccheckpoint.v1;

import "gogoproto/gogo.proto";
import "babylon/btccheckpoint/btccheckpoint.proto";

option go_package = "github.com/babylonchain/babylon/x/btccheckpoint/types";

// Msg defines the Msg service.
service Msg {
  rpc InsertBTCSpvProof(MsgInsertBTCSpvProof)
      returns (MsgInsertBTCSpvProofResponse);
}

message MsgInsertBTCSpvProof {
  string submitter = 1;
  repeated babylon.btccheckpoint.v1.BTCSpvProof proofs = 2;
}

message MsgInsertBTCSpvProofResponse {}
